--- a/avaliador1/pv/10-2/index.html
+++ b/avaliador1/pv/10-2/index.html
@@ -119,7 +119,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-1252f810 elementor-widget elementor-widget-html" data-id="1252f810" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<meta http-equiv="refresh" content="4; URL=https://checkout.perfectpay.com.br/pay/PPU38CN6MG0?src=Fernanda-avaliador"/>		</div>
+			<meta http-equiv="refresh" content="4; URL=https://go.perfectpay.com.br/PPU38CNA9IK?src=avaliador"/>		</div>
 				</div>
 				<div class="elementor-element elementor-element-5a2fccf8 elementor-widget elementor-widget-spacer" data-id="5a2fccf8" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
