--- a/Ajuda/noah/01/index.html
+++ b/Ajuda/noah/01/index.html
@@ -203,7 +203,7 @@ src="https://www.facebook.com/tr?id=1052360739248442&ev=PageView&noscript=1"
       <div class="row flex-center presell-links-wrp" data-aos="zoom-in" data-aos-offset="0">
         <div class="grid-8 grid-sm-12 grid-xs-12">
           <ul id="presell-botoes" class="presell-links">
-                                        <li><a href="/escolha-o-valor/index.html" class="btn btn-buy  btn-pulse">Ajude o Noah</a></li>
+                                        <li><a href="../escolha-o-valor/index.html" class="btn btn-buy  btn-pulse">Ajude o Noah</a></li>
                       </ul>
         </div>
       </div>
