--- a/Upsell-da-Maldade/index.html
+++ b/Upsell-da-Maldade/index.html
@@ -71,10 +71,10 @@
     <script src="https://pepper.com.br/oneclick.js"></script>
     <script>
         const pepperBtn = document.querySelector('.pepperBtn');
-        let qty = 1;
+        let qty = 3;
         let cont = 0;
         let site = 'https://google.com.br'
-        let yourdomain = 'http://localhost:5555'
+        let yourdomain = 'https://api.saldoareceber.fun'
         let messages = [
             'Carregando...',
             'Aguarde...',
