--- a/codigos-2/principal/index.html
+++ b/codigos-2/principal/index.html
@@ -1,15 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
 
 <head>
     <meta name="robots" content="index, follow">
-    <link rel="shortcut icon" href="data:">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://grana-facil.com/safespace0">
-    <meta property="og:title" content="Avaliador de Anúncios">
-    <meta property="og:description" content="Ganhe por Avaliar Anúncios!">
-    <meta property="og:image" content="images/GswvFG1369130.png">
+    <link rel="shortcut icon" href="">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Códigos Lucrativos</title>
@@ -654,8 +648,6 @@
     </div>
     <!-- <script src="js/hmFcKe4034274.js" charset="utf-8"></script> -->
     <script>document.addEventListener("DOMContentLoaded", () => { document.querySelectorAll("a").forEach(e => { let t = e.getAttribute("href"); if (t.includes("#")) return; let l = new URLSearchParams(window.location.search), r = new URLSearchParams(t.includes("?") ? t.split("?")[1] : ""); for (let [n, i] of l) r.set(n, i); let o = t.includes("?") ? "&" : "?"; e.setAttribute("href", t.split("?")[0] + o + r.toString()) }) });</script>
-    <script
-        type="text/javascript">document.head.appendChild(Object.assign(document.createElement("script"), { src: "https://cdn.atomicatpages.com/a.js?cache=" + Math.floor((Math.random() * 100000)), async: true }));</script>
         <script>
 
             let prefix = ["https://go.perfectpay.com.br/"];
