--- a/codigos-2/assets/form-3.html
+++ b/codigos-2/assets/form-3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Códigos Lucrativos</title>
-    <link rel="stylesheet" href="../Principal/styles.css">
+    <link rel="stylesheet" href="../principal/styles.css">
     <script async src="https://connect.facebook.net/en_US/fbevents.js"></script>
     <script>
     window.onload = function () {
