--- a/codigos-2/assets/form-1.html
+++ b/codigos-2/assets/form-1.html
@@ -37,7 +37,7 @@
       ganhou um teste grátis.</h2>
     <!--Section 01 - (qual você prefere?)-->
     <div class="container bg-white p-5 rounded text-center mb-3">
-      <img class="img-fluid w-25 mb-2" src="/assets/images/logo-apple.png" alt>
+      <img class="img-fluid w-25 mb-2" src="../assets/images/logo-apple.png" alt>
       <p class="text-center">Clique no botão abaixo para gerar o seu código
         Apple.</p>
       <button type="button" class="btn btn-success mb-4" onclick="myFunction()"
