--- a/codigos-2/assets/form-3.html
+++ b/codigos-2/assets/form-3.html
@@ -37,7 +37,7 @@
         class="bg-success px-2">R$ 28,00</b> pelo código Nike.</h5>
     <!--Section 01 - (qual você prefere?)-->
     <div class="container bg-white p-5 rounded text-center mb-3">
-      <img class="img-fluid w-25 mb-2" src="/assets/images/amazon-logo.png" alt>
+      <img class="img-fluid w-25 mb-2" src="../assets/images/amazon-logo.png" alt>
       <p class="text-center">Clique no botão abaixo para gerar o seu código
         Amazon.</p>
       <button type="button" class="btn btn-success mb-4" onclick="myFunction()"
