--- a/codigos-2/assets/form-2.html
+++ b/codigos-2/assets/form-2.html
@@ -61,7 +61,7 @@
         <input type="text" class="form-control" id="exampleInputEmail1"
           aria-describedby="emailHelp">
       </div>
-      <a class="btn btn-primary btn-lg mb-5" href="/assets/form-3.html">Enviar
+      <a class="btn btn-primary btn-lg mb-5" href="../assets/form-3.html">Enviar
         <svg class="ml-2" xmlns="http://www.w3.org/2000/svg" height="1em"
           viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
           <style>
