--- a/codigos-2/assets/oferta.html
+++ b/codigos-2/assets/oferta.html
@@ -38,7 +38,7 @@
     <p>Para continuar gerando os CÓDIGOS para as empresas pague a taxa.<br><br>
     <b>Porque pagar a taxa?</b><br><br>A taxa é paga para proteção contra fraudes e será reembolsada na sua conta do aplicativo.
     </p>
-    <a href="https://go.perfectpay.com.br/PPU38CNGABD"><button type="button" class="btn btn-success"><b>LIBERAR O APP</b></button></a>
+    <a href="https://go.perfectpay.com.br/PPU38CNG9K3"><button type="button" class="btn btn-success"><b>LIBERAR O APP</b></button></a>
 
   </div>
   <script src="./js/bootstrap.min.js"
